apps/api/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: pikol-pull-secret
      containers:
        - name: api
          image: ghcr.io/moot-app/api:x.x.x
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              memory: 450Mi
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 10
            periodSeconds: 10
