apps/api/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 3000
